# auto_media

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  system_design.md  tauri.conf.json
capabilities/: default.json
conf/: auto_media.toml  topic_cache.json
scripts/: deploy.ps1  rebuild_and_run.ps1
src/: app.rs  commands.rs  config.rs  logging.rs  main.rs  scheduler.rs  startup.rs  state.rs  topic_cache.rs  tray.rs  watermark.rs
src/browser/: cdp.rs  mod.rs  xhs.rs  zhihu.rs
src/publish/: image_scanner.rs  job.rs  mod.rs
src/ui/: index.html  main.js  styles.css
