[package]
name = "auto_media"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
aes = "0.8"
async-trait = "0.1"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
md5 = "0.7"
mime_guess = "2"
opener = "0.7"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
